Fixes whitespace escaping issue on translation edit page

--- a/app/assets/stylesheets/pages/translations.scss
+++ b/app/assets/stylesheets/pages/translations.scss
@@ -28,6 +28,7 @@ body.translations {
   }
 
   .well {
+    white-space: pre; 
     padding: 5px 10px;
     background-color: #fbfcfc;
     border: 1px solid #d3d9de;
